--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">EcoApp</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="username">Username</string>
+    <string name="field_name">Your name</string>
+    <string name="welcome">Welcome</string>
+    <string name="phone">Phonenumber</string>
+    <string name="balance">Balance</string>
+    <string name="latest">Latest Transactions</string>
+    <string name="shopping_latest">Latest Shopping</string>
+    <string name="cashpickup_latest">Latest Cash Pickup</string>
+    <string name="credit_latest">Latest Credit</string>
 </resources>
